// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Log entries E2E tests when creating log entries will allow admins to create log entries for other users 1`] = `
{
  "air": [
    {
      "count": 2,
      "endPressure": 1140,
      "material": "fe",
      "name": "golden minimalism",
      "o2Percent": 26.9,
      "pressureUnit": "psi",
      "startPressure": 3210,
      "volume": 18,
      "workingPressure": 207,
    },
  ],
  "conditions": {
    "temperatureUnit": "C",
  },
  "createdAt": "2024-07-23T13:17:17.900Z",
  "creator": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "logBookSharing": "private",
    "memberSince": 1582583450944,
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "depths": {
    "depthUnit": "m",
    "maxDepth": 28.2,
  },
  "equipment": {
    "weight": 4.8,
    "weightUnit": "lbs",
  },
  "id": "de92700b-73c2-478b-90b9-167d3e2b1383",
  "logNumber": 102,
  "notes": "I did a dive!",
  "tags": [],
  "timing": {
    "bottomTime": 46,
    "duration": 58.32,
    "entryTime": 1710954720000,
    "timezone": "Asia/Tokyo",
  },
  "updatedAt": "2024-07-23T14:14:19.838Z",
}
`;

exports[`Log entries E2E tests when creating log entries will create and return a new log entry 1`] = `
{
  "air": [
    {
      "count": 2,
      "endPressure": 1140,
      "material": "fe",
      "name": "golden minimalism",
      "o2Percent": 26.9,
      "pressureUnit": "psi",
      "startPressure": 3210,
      "volume": 18,
      "workingPressure": 207,
    },
  ],
  "conditions": {
    "temperatureUnit": "C",
  },
  "createdAt": "2024-07-23T13:17:17.799Z",
  "creator": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "logBookSharing": "private",
    "memberSince": 1582583450944,
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "depths": {
    "depthUnit": "m",
    "maxDepth": 28.2,
  },
  "equipment": {
    "weight": 4.8,
    "weightUnit": "lbs",
  },
  "id": "ab81b769-109b-4920-aa49-24a17a4d939e",
  "logNumber": 102,
  "notes": "I did a dive!",
  "site": {
    "averageDifficulty": 2.28,
    "averageRating": 3.09,
    "createdOn": 1681228347157,
    "creator": {
      "accountTier": 0,
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
      "location": "West Covina",
      "logBookSharing": "private",
      "memberSince": 1582583450944,
      "name": "Devin Ratke",
      "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
      "username": "Ayla.Rippin",
    },
    "depth": {
      "depth": 12.86,
      "unit": "m",
    },
    "description": "Cui sopor assumenda minus conduco vehemens varius ipsa uredo. Strenuus conculco bis. Capitulus teneo desidero dedecor arbitro voluptatum.",
    "directions": "Universe debeo arcus similique ipsum speculum et adhaero minima. Ambitus ratione adaugeo vilis celer demitto ulciscor incidunt decens tristis. Ultra thymum conturbo.",
    "freeToDive": false,
    "gps": {
      "lat": -57.4046,
      "lon": 39.6424,
    },
    "id": "5b125836-5b5b-4ccc-a56e-58891f8bebfc",
    "location": "West Emanuelbury",
    "name": "alert awesome intuition",
    "updatedOn": 1689675065387,
    "waterType": "fresh",
  },
  "tags": [],
  "timing": {
    "bottomTime": 46,
    "duration": 58.32,
    "entryTime": 1710954720000,
    "timezone": "Asia/Tokyo",
  },
  "updatedAt": "2024-07-23T14:18:56.813Z",
}
`;

exports[`Log entries E2E tests when creating log entries will return a 400 response if the request body is invalid 1`] = `
{
  "issues": [
    {
      "code": "too_small",
      "exact": false,
      "inclusive": false,
      "message": "Number must be greater than 0",
      "minimum": 0,
      "path": [
        "logNumber",
      ],
      "type": "number",
    },
    {
      "code": "invalid_type",
      "expected": "object",
      "message": "Required",
      "path": [
        "timing",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "notes",
      ],
      "received": "number",
    },
  ],
}
`;

exports[`Log entries E2E tests when creating log entries will return a 400 response if the request body is missing 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "object",
      "message": "Required",
      "path": [
        "timing",
      ],
      "received": "undefined",
    },
  ],
}
`;

exports[`Log entries E2E tests when creating log entries will return a 400 response if the request body is missing required fields 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "object",
      "message": "Required",
      "path": [
        "timing",
      ],
      "received": "undefined",
    },
  ],
}
`;

exports[`Log entries E2E tests when creating log entries will return a 400 response if the site ID cannot be found 1`] = `"Dive site with ID "37a214f6-6167-4468-947d-b3171a0425fd" not found."`;

exports[`Log entries E2E tests when fetching recent dive sites will allow admins to query the most recent dive sites for any user 1`] = `
[
  {
    "id": "74aa1202-9d61-443b-b8f5-44dde5ef18d5",
    "name": "exotic warmhearted aside",
  },
  {
    "id": "30d994f4-e4b6-41fe-9a47-8c11f263272b",
    "name": "frequent realistic paramedic",
  },
  {
    "id": "5f799498-2730-452f-b78b-933510c1174c",
    "name": "good-natured bountiful relay",
  },
  {
    "id": "f991d081-5092-4a31-a256-c1a1bd55aab5",
    "name": "humming past mathematics",
  },
  {
    "id": "0272ce1a-5715-4a42-a05a-86fdf63cc6ed",
    "name": "modern sorrowful girdle",
  },
  {
    "id": "6f7332db-9422-4c5b-a76d-06c4e602990a",
    "name": "remarkable unique shoelace",
  },
  {
    "id": "fac282b1-e048-4534-857c-dfef02ee9889",
    "name": "rude ajar aggradation",
  },
  {
    "id": "92c2d776-81fe-442f-ad63-dc83822deafe",
    "name": "specific infinite chalice",
  },
  {
    "id": "31564910-9f3d-45dc-b0c8-f836e7ff7b8d",
    "name": "spotless gifted gallon",
  },
  {
    "id": "0bf18d16-01a4-4e78-8c7f-4abf1b8e5e49",
    "name": "voluminous heartfelt imprisonment",
  },
]
`;

exports[`Log entries E2E tests when fetching recent dive sites will return a 400 response if query string is invalid 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received nan",
      "path": [
        "count",
      ],
      "received": "nan",
    },
  ],
}
`;

exports[`Log entries E2E tests when fetching recent dive sites will return the most recently visited dive sites 1`] = `
[
  {
    "id": "c14340a8-858b-478e-8308-c800149777a7",
    "name": "damp forsaken chapter",
  },
  {
    "id": "74aa1202-9d61-443b-b8f5-44dde5ef18d5",
    "name": "exotic warmhearted aside",
  },
  {
    "id": "30d994f4-e4b6-41fe-9a47-8c11f263272b",
    "name": "frequent realistic paramedic",
  },
  {
    "id": "a0c60cbe-d80e-4860-ad1e-b390171091ed",
    "name": "funny substantial strength",
  },
  {
    "id": "5f799498-2730-452f-b78b-933510c1174c",
    "name": "good-natured bountiful relay",
  },
  {
    "id": "f991d081-5092-4a31-a256-c1a1bd55aab5",
    "name": "humming past mathematics",
  },
  {
    "id": "0272ce1a-5715-4a42-a05a-86fdf63cc6ed",
    "name": "modern sorrowful girdle",
  },
  {
    "id": "b51c9d49-2df1-4c9f-96bf-73a252036880",
    "name": "original pitiful resource",
  },
  {
    "id": "6f7332db-9422-4c5b-a76d-06c4e602990a",
    "name": "remarkable unique shoelace",
  },
  {
    "id": "fac282b1-e048-4534-857c-dfef02ee9889",
    "name": "rude ajar aggradation",
  },
  {
    "id": "1561e4a5-8777-433a-9e9d-e8a07452ce88",
    "name": "silky sharp brilliant",
  },
  {
    "id": "92c2d776-81fe-442f-ad63-dc83822deafe",
    "name": "specific infinite chalice",
  },
  {
    "id": "31564910-9f3d-45dc-b0c8-f836e7ff7b8d",
    "name": "spotless gifted gallon",
  },
  {
    "id": "b24146f0-08ed-47fc-8bb3-98371c2c2909",
    "name": "tattered rigid forever",
  },
  {
    "id": "0bf18d16-01a4-4e78-8c7f-4abf1b8e5e49",
    "name": "voluminous heartfelt imprisonment",
  },
]
`;

exports[`Log entries E2E tests when retrieving single log entries will allow an admin to view any log entry 1`] = `
{
  "air": [
    {
      "count": 1,
      "endPressure": 870,
      "hePercent": 15.1,
      "material": "fe",
      "name": "sardonic vacuum",
      "pressureUnit": "psi",
      "startPressure": 3390,
      "volume": 15,
      "workingPressure": 300,
    },
  ],
  "conditions": {
    "airTemperature": 56.3,
    "bottomTemperature": 72.5,
    "current": 4.4,
    "surfaceTemperature": 58.8,
    "temperatureUnit": "F",
  },
  "createdAt": "2023-02-03T15:50:47.000Z",
  "creator": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "logBookSharing": "private",
    "memberSince": 1582583450944,
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "depths": {
    "averageDepth": 6.273,
    "depthUnit": "m",
    "maxDepth": 6.97,
  },
  "equipment": {
    "boots": true,
    "camera": true,
    "exposureSuit": "none",
    "gloves": true,
    "hood": true,
    "scooter": false,
    "torch": true,
    "trimCorrectness": "headDown",
    "weight": 24.1,
    "weightUnit": "lbs",
  },
  "id": "bdf818ca-03d5-402c-b294-0919ca512a8a",
  "logNumber": 317,
  "notes": "Creptio cauda cubitum substantia annus sordeo. Tenus antepono vesica. Vigilo collum cavus sto enim uberrime.",
  "site": {
    "averageRating": 1.43,
    "createdOn": 1712720972952,
    "creator": {
      "accountTier": 0,
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
      "location": "West Covina",
      "logBookSharing": "private",
      "memberSince": 1582583450944,
      "name": "Devin Ratke",
      "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
      "username": "Ayla.Rippin",
    },
    "depth": {
      "depth": 36.14,
      "unit": "ft",
    },
    "description": "Mollitia crebro solutio comedo velit theca cresco. Tardus una attonbitus aurum versus confero triumphus canto sumptus. Asporto dolore adaugeo censura amplus synagoga unde demoror ara commodo.",
    "directions": "Vinitor cura dapifer trado aperte statua vestigium valens. Acies consequatur quia carus. Cotidie dedico solium contigo tredecim claustrum convoco ut varietas.",
    "freeToDive": true,
    "gps": {
      "lat": 27.2481,
      "lon": -174.3613,
    },
    "id": "b51c9d49-2df1-4c9f-96bf-73a252036880",
    "location": "East Shawnhaven",
    "name": "original pitiful resource",
    "shoreAccess": false,
    "updatedOn": 1703560897584,
    "waterType": "salt",
  },
  "tags": [],
  "timing": {
    "bottomTime": 3896,
    "duration": 4286,
    "entryTime": 1723057255591,
    "timezone": "America/Blanc-Sablon",
  },
}
`;

exports[`Log entries E2E tests when retrieving single log entries will return the requested log entry 1`] = `
{
  "air": [
    {
      "count": 1,
      "endPressure": 870,
      "hePercent": 15.1,
      "material": "fe",
      "name": "sardonic vacuum",
      "pressureUnit": "psi",
      "startPressure": 3390,
      "volume": 15,
      "workingPressure": 300,
    },
  ],
  "conditions": {
    "airTemperature": 56.3,
    "bottomTemperature": 72.5,
    "current": 4.4,
    "surfaceTemperature": 58.8,
    "temperatureUnit": "F",
  },
  "createdAt": "2023-02-03T15:50:47.000Z",
  "creator": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "logBookSharing": "private",
    "memberSince": 1582583450944,
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "depths": {
    "averageDepth": 6.273,
    "depthUnit": "m",
    "maxDepth": 6.97,
  },
  "equipment": {
    "boots": true,
    "camera": true,
    "exposureSuit": "none",
    "gloves": true,
    "hood": true,
    "scooter": false,
    "torch": true,
    "trimCorrectness": "headDown",
    "weight": 24.1,
    "weightUnit": "lbs",
  },
  "id": "bdf818ca-03d5-402c-b294-0919ca512a8a",
  "logNumber": 317,
  "notes": "Creptio cauda cubitum substantia annus sordeo. Tenus antepono vesica. Vigilo collum cavus sto enim uberrime.",
  "site": {
    "averageRating": 1.43,
    "createdOn": 1712720972952,
    "creator": {
      "accountTier": 0,
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
      "location": "West Covina",
      "logBookSharing": "private",
      "memberSince": 1582583450944,
      "name": "Devin Ratke",
      "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
      "username": "Ayla.Rippin",
    },
    "depth": {
      "depth": 36.14,
      "unit": "ft",
    },
    "description": "Mollitia crebro solutio comedo velit theca cresco. Tardus una attonbitus aurum versus confero triumphus canto sumptus. Asporto dolore adaugeo censura amplus synagoga unde demoror ara commodo.",
    "directions": "Vinitor cura dapifer trado aperte statua vestigium valens. Acies consequatur quia carus. Cotidie dedico solium contigo tredecim claustrum convoco ut varietas.",
    "freeToDive": true,
    "gps": {
      "lat": 27.2481,
      "lon": -174.3613,
    },
    "id": "b51c9d49-2df1-4c9f-96bf-73a252036880",
    "location": "East Shawnhaven",
    "name": "original pitiful resource",
    "shoreAccess": false,
    "updatedOn": 1703560897584,
    "waterType": "salt",
  },
  "tags": [],
  "timing": {
    "bottomTime": 3896,
    "duration": 4286,
    "entryTime": 1723057255591,
    "timezone": "America/Blanc-Sablon",
  },
}
`;

exports[`Log entries E2E tests when searching log entries will allow a search with parameters 1`] = `
{
  "data": [
    {
      "air": undefined,
      "entryTime": 1679130954910,
      "id": "13a21f5a-0520-47c8-8bc8-3f4ce9993bf0",
      "owner": "Ayla.Rippin",
      "site": "legal incomplete trachoma",
    },
    {
      "air": undefined,
      "entryTime": 1680371548754,
      "id": "a1812561-b1b4-4ff3-a219-28dc947b08ed",
      "owner": "Ayla.Rippin",
      "site": "simplistic key cupcake",
    },
    {
      "air": undefined,
      "entryTime": 1682980003281,
      "id": "3189b255-216a-452a-ba14-ab2133564427",
      "owner": "Ayla.Rippin",
      "site": "alert awesome intuition",
    },
    {
      "air": undefined,
      "entryTime": 1683925469701,
      "id": "d93d7a31-0d4c-4574-836c-813432f6037b",
      "owner": "Ayla.Rippin",
      "site": "well-worn upbeat trillion",
    },
    {
      "air": undefined,
      "entryTime": 1686131159270,
      "id": "1c11ab39-0089-402a-9cf5-edc5c42359b1",
      "owner": "Ayla.Rippin",
      "site": "wry boring examiner",
    },
    {
      "air": undefined,
      "entryTime": 1689112971040,
      "id": "bd09eccc-61d6-41a8-89fd-4d2d16a4d3ee",
      "owner": "Ayla.Rippin",
      "site": "monumental wild standardization",
    },
    {
      "air": undefined,
      "entryTime": 1689809781939,
      "id": "344c2b0c-afd6-4af1-81fb-f47e0547e613",
      "owner": "Ayla.Rippin",
      "site": "deadly lean mobile",
    },
    {
      "air": undefined,
      "entryTime": 1691408795216,
      "id": "b8c25cdd-6eb1-490f-9628-092d2bc2f4fa",
      "owner": "Ayla.Rippin",
      "site": "scornful well-worn baggage",
    },
  ],
  "totalCount": 24,
}
`;

exports[`Log entries E2E tests when searching log entries will allow admins to search another user's log entries 1`] = `
[
  {
    "entryTime": 1733943256993,
    "id": "ed072537-423a-4d14-89b3-6851c9009eb7",
    "owner": "Ayla.Rippin",
    "site": "humming past mathematics",
  },
  {
    "entryTime": 1733791432099,
    "id": "14855a1f-5a9d-4904-83df-4dc9cb479b70",
    "owner": "Ayla.Rippin",
    "site": "remarkable unique shoelace",
  },
  {
    "entryTime": 1732941635930,
    "id": "217a32f7-c249-430a-8a5a-670a9d862c93",
    "owner": "Ayla.Rippin",
    "site": "specific infinite chalice",
  },
  {
    "entryTime": 1732217598695,
    "id": "266423f9-7824-4a59-80dc-7707bf3ff57d",
    "owner": "Ayla.Rippin",
    "site": "exotic warmhearted aside",
  },
  {
    "entryTime": 1732199340737,
    "id": "9a205586-e2b9-444e-a869-bd261d32efbe",
    "owner": "Ayla.Rippin",
    "site": "spotless gifted gallon",
  },
  {
    "entryTime": 1731295358496,
    "id": "62f2d18c-901a-4831-a69d-426922dd40ab",
    "owner": "Ayla.Rippin",
    "site": "voluminous heartfelt imprisonment",
  },
  {
    "entryTime": 1731133799953,
    "id": "e38c3ef1-a861-494a-b017-56f8fbbf5acd",
    "owner": "Ayla.Rippin",
    "site": "good-natured bountiful relay",
  },
  {
    "entryTime": 1729706499056,
    "id": "5b7d3fdf-3aa3-4ae6-bcf9-e08e42f052c6",
    "owner": "Ayla.Rippin",
    "site": "frequent realistic paramedic",
  },
  {
    "entryTime": 1728792927157,
    "id": "9cc2da23-72fe-4444-a26f-7c2f4bac1d52",
    "owner": "Ayla.Rippin",
    "site": "rude ajar aggradation",
  },
  {
    "entryTime": 1726813217641,
    "id": "7b19035d-4347-438f-b9ec-abec0a9d4de7",
    "owner": "Ayla.Rippin",
    "site": "specific infinite chalice",
  },
  {
    "entryTime": 1725442351763,
    "id": "bd6e62c1-2d0c-4fec-b803-4868fd016c2d",
    "owner": "Ayla.Rippin",
    "site": "modern sorrowful girdle",
  },
  {
    "entryTime": 1724274622203,
    "id": "8c681da5-d22a-4a98-938f-9de416a0beff",
    "owner": "Ayla.Rippin",
    "site": "tattered rigid forever",
  },
  {
    "entryTime": 1723715148982,
    "id": "adcb2ff5-e086-42dd-9e35-f2443bfab8f4",
    "owner": "Ayla.Rippin",
    "site": "damp forsaken chapter",
  },
  {
    "entryTime": 1723714471828,
    "id": "cc80f224-44b1-48f0-94ac-a7ee516afaef",
    "owner": "Ayla.Rippin",
    "site": "funny substantial strength",
  },
  {
    "entryTime": 1723057255591,
    "id": "bdf818ca-03d5-402c-b294-0919ca512a8a",
    "owner": "Ayla.Rippin",
    "site": "original pitiful resource",
  },
  {
    "entryTime": 1721516430460,
    "id": "74020122-72c9-4c37-8761-36622f65b99c",
    "owner": "Ayla.Rippin",
    "site": "silky sharp brilliant",
  },
  {
    "entryTime": 1717660340600,
    "id": "03dfa322-9d45-45e7-beec-c7d85face253",
    "owner": "Ayla.Rippin",
    "site": "sympathetic mortified taxicab",
  },
  {
    "entryTime": 1717278271035,
    "id": "669333a9-575f-40d1-9fef-945936cbf473",
    "owner": "Ayla.Rippin",
    "site": "giant broken meat",
  },
  {
    "entryTime": 1716750400946,
    "id": "50b754cb-5ee1-4c31-8c5f-b0178a1fdd27",
    "owner": "Ayla.Rippin",
    "site": "meaty weird good",
  },
  {
    "entryTime": 1715030867283,
    "id": "2933b80f-9e32-4d2a-9b8a-0dd281e2c001",
    "owner": "Ayla.Rippin",
    "site": "bold staid lode",
  },
  {
    "entryTime": 1714775000327,
    "id": "23169c0a-ed46-4117-b8f2-8bda9ec95a3c",
    "owner": "Ayla.Rippin",
    "site": "steel monthly hypothesis",
  },
  {
    "entryTime": 1713918351228,
    "id": "17093167-3930-4106-827b-6213a6673bef",
    "owner": "Ayla.Rippin",
    "site": "bustling normal convert",
  },
  {
    "entryTime": 1711660502569,
    "id": "ca091d05-853c-4416-817c-f19ce9c3c360",
    "owner": "Ayla.Rippin",
    "site": "rundown joyous put",
  },
  {
    "entryTime": 1708817573109,
    "id": "31470e98-e219-48d0-83b0-149decdba3c2",
    "owner": "Ayla.Rippin",
    "site": "nifty idle roof",
  },
  {
    "entryTime": 1706626146762,
    "id": "4e79e6e4-25c7-423b-b521-5d369c9e784d",
    "owner": "Ayla.Rippin",
    "site": "wry boring examiner",
  },
  {
    "entryTime": 1703936929074,
    "id": "95ad568e-be63-44f3-9761-477b08289074",
    "owner": "Ayla.Rippin",
    "site": "caring nutty grub",
  },
  {
    "entryTime": 1703735592086,
    "id": "fb657e95-23f6-4eb4-a9c7-fd50641a702d",
    "owner": "Ayla.Rippin",
    "site": "shameful glorious noodles",
  },
  {
    "entryTime": 1700139587962,
    "id": "0159e8e9-4e99-4fd1-9bd6-00d3ed722d44",
    "owner": "Ayla.Rippin",
    "site": "deadly lean mobile",
  },
  {
    "entryTime": 1698988814651,
    "id": "364c98a9-8052-4de5-8321-2c31a6676c44",
    "owner": "Ayla.Rippin",
    "site": "ideal blond spume",
  },
  {
    "entryTime": 1698749983194,
    "id": "086182f8-7145-471b-8009-e09ee7054ae2",
    "owner": "Ayla.Rippin",
    "site": "caring nutty grub",
  },
  {
    "entryTime": 1698436188401,
    "id": "a0fd64cd-78b1-4f42-9e5c-ad772736b4c9",
    "owner": "Ayla.Rippin",
    "site": "steep aromatic broccoli",
  },
  {
    "entryTime": 1696044984965,
    "id": "92bd0414-4cbe-446d-8df0-953611b3d79d",
    "owner": "Ayla.Rippin",
    "site": "bustling normal convert",
  },
  {
    "entryTime": 1694102590698,
    "id": "a8578a1e-d5be-4384-ad05-bfdf4d6890e9",
    "owner": "Ayla.Rippin",
    "site": "alert awesome intuition",
  },
  {
    "entryTime": 1693043349454,
    "id": "93533d3a-9d24-4cea-928d-bb86fafd846f",
    "owner": "Ayla.Rippin",
    "site": "far-off critical machine",
  },
  {
    "entryTime": 1692640030325,
    "id": "9d63e6e4-3144-42ad-9828-39a9575350f1",
    "owner": "Ayla.Rippin",
    "site": "voluminous heartfelt imprisonment",
  },
  {
    "entryTime": 1692431407330,
    "id": "ea4a01cf-afb1-4b02-908d-2425cfb9ad10",
    "owner": "Ayla.Rippin",
    "site": "silky sharp brilliant",
  },
  {
    "entryTime": 1691408795216,
    "id": "b8c25cdd-6eb1-490f-9628-092d2bc2f4fa",
    "owner": "Ayla.Rippin",
    "site": "scornful well-worn baggage",
  },
  {
    "entryTime": 1689809781939,
    "id": "344c2b0c-afd6-4af1-81fb-f47e0547e613",
    "owner": "Ayla.Rippin",
    "site": "deadly lean mobile",
  },
  {
    "entryTime": 1689112971040,
    "id": "bd09eccc-61d6-41a8-89fd-4d2d16a4d3ee",
    "owner": "Ayla.Rippin",
    "site": "monumental wild standardization",
  },
  {
    "entryTime": 1686131159270,
    "id": "1c11ab39-0089-402a-9cf5-edc5c42359b1",
    "owner": "Ayla.Rippin",
    "site": "wry boring examiner",
  },
  {
    "entryTime": 1683925469701,
    "id": "d93d7a31-0d4c-4574-836c-813432f6037b",
    "owner": "Ayla.Rippin",
    "site": "well-worn upbeat trillion",
  },
  {
    "entryTime": 1682980003281,
    "id": "3189b255-216a-452a-ba14-ab2133564427",
    "owner": "Ayla.Rippin",
    "site": "alert awesome intuition",
  },
  {
    "entryTime": 1680371548754,
    "id": "a1812561-b1b4-4ff3-a219-28dc947b08ed",
    "owner": "Ayla.Rippin",
    "site": "simplistic key cupcake",
  },
  {
    "entryTime": 1679130954910,
    "id": "13a21f5a-0520-47c8-8bc8-3f4ce9993bf0",
    "owner": "Ayla.Rippin",
    "site": "legal incomplete trachoma",
  },
  {
    "entryTime": 1677015240588,
    "id": "6b8544f7-0083-4b41-8051-a4897543b966",
    "owner": "Ayla.Rippin",
    "site": "original pitiful resource",
  },
  {
    "entryTime": 1676242328548,
    "id": "e7dd6f8c-814a-4bee-a277-bd0393244f88",
    "owner": "Ayla.Rippin",
    "site": "utter extraneous calm",
  },
  {
    "entryTime": 1675003844690,
    "id": "7ff96d60-b2b9-4bad-8dc7-c1ff808072e2",
    "owner": "Ayla.Rippin",
    "site": "whirlwind measly subset",
  },
  {
    "entryTime": 1673012984256,
    "id": "edb6960b-e31d-48a7-951d-797581ca0b4d",
    "owner": "Ayla.Rippin",
    "site": "ideal blond spume",
  },
  {
    "entryTime": 1672643674915,
    "id": "d7859986-70c4-4b0e-b575-acbbcb525578",
    "owner": "Ayla.Rippin",
    "site": "old-fashioned unwieldy cartridge",
  },
  {
    "entryTime": 1671968396392,
    "id": "bb555c7c-c604-4fa2-9931-aca949e4c387",
    "owner": "Ayla.Rippin",
    "site": "giant broken meat",
  },
]
`;

exports[`Log entries E2E tests when searching log entries will perform a basic search for log entries 1`] = `
[
  {
    "entryTime": 1733943256993,
    "id": "ed072537-423a-4d14-89b3-6851c9009eb7",
    "owner": "Ayla.Rippin",
    "site": "humming past mathematics",
  },
  {
    "entryTime": 1733791432099,
    "id": "14855a1f-5a9d-4904-83df-4dc9cb479b70",
    "owner": "Ayla.Rippin",
    "site": "remarkable unique shoelace",
  },
  {
    "entryTime": 1732941635930,
    "id": "217a32f7-c249-430a-8a5a-670a9d862c93",
    "owner": "Ayla.Rippin",
    "site": "specific infinite chalice",
  },
  {
    "entryTime": 1732217598695,
    "id": "266423f9-7824-4a59-80dc-7707bf3ff57d",
    "owner": "Ayla.Rippin",
    "site": "exotic warmhearted aside",
  },
  {
    "entryTime": 1732199340737,
    "id": "9a205586-e2b9-444e-a869-bd261d32efbe",
    "owner": "Ayla.Rippin",
    "site": "spotless gifted gallon",
  },
  {
    "entryTime": 1731295358496,
    "id": "62f2d18c-901a-4831-a69d-426922dd40ab",
    "owner": "Ayla.Rippin",
    "site": "voluminous heartfelt imprisonment",
  },
  {
    "entryTime": 1731133799953,
    "id": "e38c3ef1-a861-494a-b017-56f8fbbf5acd",
    "owner": "Ayla.Rippin",
    "site": "good-natured bountiful relay",
  },
  {
    "entryTime": 1729706499056,
    "id": "5b7d3fdf-3aa3-4ae6-bcf9-e08e42f052c6",
    "owner": "Ayla.Rippin",
    "site": "frequent realistic paramedic",
  },
  {
    "entryTime": 1728792927157,
    "id": "9cc2da23-72fe-4444-a26f-7c2f4bac1d52",
    "owner": "Ayla.Rippin",
    "site": "rude ajar aggradation",
  },
  {
    "entryTime": 1726813217641,
    "id": "7b19035d-4347-438f-b9ec-abec0a9d4de7",
    "owner": "Ayla.Rippin",
    "site": "specific infinite chalice",
  },
  {
    "entryTime": 1725442351763,
    "id": "bd6e62c1-2d0c-4fec-b803-4868fd016c2d",
    "owner": "Ayla.Rippin",
    "site": "modern sorrowful girdle",
  },
  {
    "entryTime": 1724274622203,
    "id": "8c681da5-d22a-4a98-938f-9de416a0beff",
    "owner": "Ayla.Rippin",
    "site": "tattered rigid forever",
  },
  {
    "entryTime": 1723715148982,
    "id": "adcb2ff5-e086-42dd-9e35-f2443bfab8f4",
    "owner": "Ayla.Rippin",
    "site": "damp forsaken chapter",
  },
  {
    "entryTime": 1723714471828,
    "id": "cc80f224-44b1-48f0-94ac-a7ee516afaef",
    "owner": "Ayla.Rippin",
    "site": "funny substantial strength",
  },
  {
    "entryTime": 1723057255591,
    "id": "bdf818ca-03d5-402c-b294-0919ca512a8a",
    "owner": "Ayla.Rippin",
    "site": "original pitiful resource",
  },
  {
    "entryTime": 1721516430460,
    "id": "74020122-72c9-4c37-8761-36622f65b99c",
    "owner": "Ayla.Rippin",
    "site": "silky sharp brilliant",
  },
  {
    "entryTime": 1717660340600,
    "id": "03dfa322-9d45-45e7-beec-c7d85face253",
    "owner": "Ayla.Rippin",
    "site": "sympathetic mortified taxicab",
  },
  {
    "entryTime": 1717278271035,
    "id": "669333a9-575f-40d1-9fef-945936cbf473",
    "owner": "Ayla.Rippin",
    "site": "giant broken meat",
  },
  {
    "entryTime": 1716750400946,
    "id": "50b754cb-5ee1-4c31-8c5f-b0178a1fdd27",
    "owner": "Ayla.Rippin",
    "site": "meaty weird good",
  },
  {
    "entryTime": 1715030867283,
    "id": "2933b80f-9e32-4d2a-9b8a-0dd281e2c001",
    "owner": "Ayla.Rippin",
    "site": "bold staid lode",
  },
  {
    "entryTime": 1714775000327,
    "id": "23169c0a-ed46-4117-b8f2-8bda9ec95a3c",
    "owner": "Ayla.Rippin",
    "site": "steel monthly hypothesis",
  },
  {
    "entryTime": 1713918351228,
    "id": "17093167-3930-4106-827b-6213a6673bef",
    "owner": "Ayla.Rippin",
    "site": "bustling normal convert",
  },
  {
    "entryTime": 1711660502569,
    "id": "ca091d05-853c-4416-817c-f19ce9c3c360",
    "owner": "Ayla.Rippin",
    "site": "rundown joyous put",
  },
  {
    "entryTime": 1708817573109,
    "id": "31470e98-e219-48d0-83b0-149decdba3c2",
    "owner": "Ayla.Rippin",
    "site": "nifty idle roof",
  },
  {
    "entryTime": 1706626146762,
    "id": "4e79e6e4-25c7-423b-b521-5d369c9e784d",
    "owner": "Ayla.Rippin",
    "site": "wry boring examiner",
  },
  {
    "entryTime": 1703936929074,
    "id": "95ad568e-be63-44f3-9761-477b08289074",
    "owner": "Ayla.Rippin",
    "site": "caring nutty grub",
  },
  {
    "entryTime": 1703735592086,
    "id": "fb657e95-23f6-4eb4-a9c7-fd50641a702d",
    "owner": "Ayla.Rippin",
    "site": "shameful glorious noodles",
  },
  {
    "entryTime": 1700139587962,
    "id": "0159e8e9-4e99-4fd1-9bd6-00d3ed722d44",
    "owner": "Ayla.Rippin",
    "site": "deadly lean mobile",
  },
  {
    "entryTime": 1698988814651,
    "id": "364c98a9-8052-4de5-8321-2c31a6676c44",
    "owner": "Ayla.Rippin",
    "site": "ideal blond spume",
  },
  {
    "entryTime": 1698749983194,
    "id": "086182f8-7145-471b-8009-e09ee7054ae2",
    "owner": "Ayla.Rippin",
    "site": "caring nutty grub",
  },
  {
    "entryTime": 1698436188401,
    "id": "a0fd64cd-78b1-4f42-9e5c-ad772736b4c9",
    "owner": "Ayla.Rippin",
    "site": "steep aromatic broccoli",
  },
  {
    "entryTime": 1696044984965,
    "id": "92bd0414-4cbe-446d-8df0-953611b3d79d",
    "owner": "Ayla.Rippin",
    "site": "bustling normal convert",
  },
  {
    "entryTime": 1694102590698,
    "id": "a8578a1e-d5be-4384-ad05-bfdf4d6890e9",
    "owner": "Ayla.Rippin",
    "site": "alert awesome intuition",
  },
  {
    "entryTime": 1693043349454,
    "id": "93533d3a-9d24-4cea-928d-bb86fafd846f",
    "owner": "Ayla.Rippin",
    "site": "far-off critical machine",
  },
  {
    "entryTime": 1692640030325,
    "id": "9d63e6e4-3144-42ad-9828-39a9575350f1",
    "owner": "Ayla.Rippin",
    "site": "voluminous heartfelt imprisonment",
  },
  {
    "entryTime": 1692431407330,
    "id": "ea4a01cf-afb1-4b02-908d-2425cfb9ad10",
    "owner": "Ayla.Rippin",
    "site": "silky sharp brilliant",
  },
  {
    "entryTime": 1691408795216,
    "id": "b8c25cdd-6eb1-490f-9628-092d2bc2f4fa",
    "owner": "Ayla.Rippin",
    "site": "scornful well-worn baggage",
  },
  {
    "entryTime": 1689809781939,
    "id": "344c2b0c-afd6-4af1-81fb-f47e0547e613",
    "owner": "Ayla.Rippin",
    "site": "deadly lean mobile",
  },
  {
    "entryTime": 1689112971040,
    "id": "bd09eccc-61d6-41a8-89fd-4d2d16a4d3ee",
    "owner": "Ayla.Rippin",
    "site": "monumental wild standardization",
  },
  {
    "entryTime": 1686131159270,
    "id": "1c11ab39-0089-402a-9cf5-edc5c42359b1",
    "owner": "Ayla.Rippin",
    "site": "wry boring examiner",
  },
  {
    "entryTime": 1683925469701,
    "id": "d93d7a31-0d4c-4574-836c-813432f6037b",
    "owner": "Ayla.Rippin",
    "site": "well-worn upbeat trillion",
  },
  {
    "entryTime": 1682980003281,
    "id": "3189b255-216a-452a-ba14-ab2133564427",
    "owner": "Ayla.Rippin",
    "site": "alert awesome intuition",
  },
  {
    "entryTime": 1680371548754,
    "id": "a1812561-b1b4-4ff3-a219-28dc947b08ed",
    "owner": "Ayla.Rippin",
    "site": "simplistic key cupcake",
  },
  {
    "entryTime": 1679130954910,
    "id": "13a21f5a-0520-47c8-8bc8-3f4ce9993bf0",
    "owner": "Ayla.Rippin",
    "site": "legal incomplete trachoma",
  },
  {
    "entryTime": 1677015240588,
    "id": "6b8544f7-0083-4b41-8051-a4897543b966",
    "owner": "Ayla.Rippin",
    "site": "original pitiful resource",
  },
  {
    "entryTime": 1676242328548,
    "id": "e7dd6f8c-814a-4bee-a277-bd0393244f88",
    "owner": "Ayla.Rippin",
    "site": "utter extraneous calm",
  },
  {
    "entryTime": 1675003844690,
    "id": "7ff96d60-b2b9-4bad-8dc7-c1ff808072e2",
    "owner": "Ayla.Rippin",
    "site": "whirlwind measly subset",
  },
  {
    "entryTime": 1673012984256,
    "id": "edb6960b-e31d-48a7-951d-797581ca0b4d",
    "owner": "Ayla.Rippin",
    "site": "ideal blond spume",
  },
  {
    "entryTime": 1672643674915,
    "id": "d7859986-70c4-4b0e-b575-acbbcb525578",
    "owner": "Ayla.Rippin",
    "site": "old-fashioned unwieldy cartridge",
  },
  {
    "entryTime": 1671968396392,
    "id": "bb555c7c-c604-4fa2-9931-aca949e4c387",
    "owner": "Ayla.Rippin",
    "site": "giant broken meat",
  },
]
`;

exports[`Log entries E2E tests when searching log entries will return a 400 response if the query parameters are invalid 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received nan",
      "path": [
        "startDate",
      ],
      "received": "nan",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received nan",
      "path": [
        "endDate",
      ],
      "received": "nan",
    },
    {
      "code": "too_small",
      "exact": false,
      "inclusive": true,
      "message": "Number must be greater than or equal to 0",
      "minimum": 0,
      "path": [
        "skip",
      ],
      "type": "number",
    },
    {
      "code": "too_big",
      "exact": false,
      "inclusive": true,
      "maximum": 500,
      "message": "Number must be less than or equal to 500",
      "path": [
        "limit",
      ],
      "type": "number",
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'entryTime' | 'logNumber', received 'wetness'",
      "options": [
        "entryTime",
        "logNumber",
      ],
      "path": [
        "sortBy",
      ],
      "received": "wetness",
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'asc' | 'desc', received 'backwards'",
      "options": [
        "asc",
        "desc",
      ],
      "path": [
        "sortOrder",
      ],
      "received": "backwards",
    },
  ],
}
`;

exports[`Log entries E2E tests when searching log entries will return a 400 response if the start date comes after the end date in the query string 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received nan",
      "path": [
        "startDate",
      ],
      "received": "nan",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received nan",
      "path": [
        "endDate",
      ],
      "received": "nan",
    },
  ],
}
`;

exports[`Log entries E2E tests when updating an existing log entry will allow an admin to update any log entry 1`] = `
{
  "air": [
    {
      "count": 1,
      "endPressure": 1040,
      "material": "al",
      "name": "raw cushion",
      "o2Percent": 28.8,
      "pressureUnit": "psi",
      "startPressure": 2940,
      "volume": 4,
      "workingPressure": 300,
    },
    {
      "count": 1,
      "endPressure": 52.188035525381565,
      "material": "fe",
      "name": "caring poem",
      "o2Percent": 39.4,
      "pressureUnit": "bar",
      "startPressure": 191.41511167166755,
      "volume": 18,
      "workingPressure": 300,
    },
  ],
  "conditions": {
    "temperatureUnit": "F",
  },
  "createdAt": "2023-02-03T15:50:47.000Z",
  "creator": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "logBookSharing": "private",
    "memberSince": 1582583450944,
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "depths": {
    "depthUnit": "m",
    "maxDepth": 28.2,
  },
  "equipment": {
    "weight": 2.77,
    "weightUnit": "kg",
  },
  "id": "bdf818ca-03d5-402c-b294-0919ca512a8a",
  "logNumber": 102,
  "notes": "I did a dive!",
  "tags": [],
  "timing": {
    "bottomTime": 46,
    "duration": 58.32,
    "entryTime": 1710954720000,
    "timezone": "Asia/Tokyo",
  },
  "updatedAt": "2024-07-23T18:04:13.236Z",
}
`;

exports[`Log entries E2E tests when updating an existing log entry will return a 400 response if the request body is invalid 1`] = `
{
  "issues": [
    {
      "code": "too_small",
      "exact": false,
      "inclusive": false,
      "message": "Number must be greater than 0",
      "minimum": 0,
      "path": [
        "logNumber",
      ],
      "type": "number",
    },
    {
      "code": "invalid_type",
      "expected": "object",
      "message": "Required",
      "path": [
        "timing",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "notes",
      ],
      "received": "number",
    },
  ],
}
`;

exports[`Log entries E2E tests when updating an existing log entry will return a 400 response if the request body is missing 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "object",
      "message": "Required",
      "path": [
        "timing",
      ],
      "received": "undefined",
    },
  ],
}
`;

exports[`Log entries E2E tests when updating an existing log entry will return a 400 response if the request body is missing required fields 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "object",
      "message": "Required",
      "path": [
        "timing",
      ],
      "received": "undefined",
    },
  ],
}
`;

exports[`Log entries E2E tests when updating an existing log entry will return a 400 response if the site ID cannot be found 1`] = `"Dive site with ID "e637a808-90cb-4fba-823e-35cd1898ee4a" not found."`;

exports[`Log entries E2E tests when updating an existing log entry will update the requested log entry 1`] = `
{
  "air": [
    {
      "count": 1,
      "endPressure": 1040,
      "material": "al",
      "name": "raw cushion",
      "o2Percent": 28.8,
      "pressureUnit": "psi",
      "startPressure": 2940,
      "volume": 4,
      "workingPressure": 300,
    },
    {
      "count": 1,
      "endPressure": 52.188035525381565,
      "material": "fe",
      "name": "caring poem",
      "o2Percent": 39.4,
      "pressureUnit": "bar",
      "startPressure": 191.41511167166755,
      "volume": 18,
      "workingPressure": 300,
    },
  ],
  "conditions": {
    "temperatureUnit": "F",
  },
  "createdAt": "2023-02-03T15:50:47.000Z",
  "creator": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "logBookSharing": "private",
    "memberSince": 1582583450944,
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "depths": {
    "depthUnit": "m",
    "maxDepth": 28.2,
  },
  "equipment": {
    "weight": 2.77,
    "weightUnit": "kg",
  },
  "id": "bdf818ca-03d5-402c-b294-0919ca512a8a",
  "logNumber": 102,
  "notes": "I did a dive!",
  "tags": [],
  "timing": {
    "bottomTime": 46,
    "duration": 58.32,
    "entryTime": 1710954720000,
    "timezone": "Asia/Tokyo",
  },
  "updatedAt": "2024-07-23T18:04:13.101Z",
}
`;
